# MIT6006

./: README.md
Session1/: CMakeLists.txt
Session1/include/basic_algorithms/: peak_finder.h
Session1/src/: peak_finder.cc  sess1.cc
Session1/test/: CMakeLists.txt  sess1_test.cc
Session2/Cpp/: CMakeLists.txt
Session2/Cpp/include/basic_algorithms/: utils.h
Session2/Cpp/src/: sess2.cc  utils.cc
Session2/Cpp/test/: CMakeLists.txt  file1.tex  file2.tex  file3.tex  sess2_test.cc
Session2/Python/: document_distance.py  file1.tex  file2.tex
